working on adding IP addres

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="input__label no-margin">Copy and paste this:</div>
-                    <div id="answer" class="input__answer">@ IN TXT "v=spf1"</div>
+                    <div id="answer" class="input__answer"></div>
                 </div>
             </div>
             <div class="row margin-top-50">
