--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="form-group">
                             <div class="input__label">Should any hostnames<a href="#" data-toggle="popover" tabindex="0"
                                     data-trigger="focus" data-placement="top" data-content="This includes subdomains."><i
-                                        class="fal fa-question-circle"></i></a> ending in <span id="domainName"></span>
+                                        class="fal fa-question-circle"></i></a> ending in <u id="domainName"></u>
                                 be
                                 able to send email for this
                                 domain? </div>
