attempted to get the relay IP input to fire on keyup and then print results to answer. may need to reorganize some of the event listeners and functions.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                                         data-content="If you require more than one IP address, separate with a space. Make sure you include the subnet mask, ie: 127.0.0.1/32. "><i
                                             class="fal fa-question-circle"></i></a>authorized to deliver or relay mail
                                     for this domain: </label>
-                                <input type="text" class="form-control" id="relayIPAddress" placeholder="IP address(es) in CIDR format" />
+                                <input type="text" class="form-control" id="relayIPAddress" placeholder="IP address(es) in CIDR format"
+                                    value="" />
                             </div>
                             <div class="form-group">
                                 <label class="input__label" for="relayHostnames">List any hostname(s)<a href="#"
