turned answer into an input. floats now. added copy function. turned answer into an array, but punctuation in the strings is blowing it up.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
                     <h1>SPF Wizard</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
-                    <div class="input__label no-margin">Copy and paste this:</div>
-                    <div id="answer" class="input__answer"></div>
+            <div class="row answer__wrapper margin-top-20">
+                <div class="input__label no-margin">Copy and paste this:</div>
+                <div class="input__answer__wrapper">
+                    <input type="text" id="answer" class="input__answer" value="" disabled>
+                    <i class="fal fa-copy answer__copy"></i>
                 </div>
             </div>
-            <div class="row margin-top-50">
+            <div class="row margin-top-20">
                 <div class="col-md-8 ml-auto mr-auto">
                     <form class="form__spf-wizard">
 
