--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
                     <h1>SPF Wizard</h1>
                 </div>
             </div>
-            <div class="row answer__wrapper margin-top-20">
+            <div class="row input__answer__wrapper">
                 <div class="input__label no-margin">Copy and paste this:</div>
-                <div class="input__answer__wrapper">
-                    <input type="text" id="answer" class="input__answer" value="" disabled>
-                    <i class="fal fa-copy answer__copy"></i>
-                </div>
+                <input type="text" id="answer" class="input__answer" value="" disabled>
+                <i class="fal fa-copy input__answer__copy"></i>
             </div>
-            <div class="row margin-top-20">
+            <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <form class="form__spf-wizard">
 
