all advanced options work :D :D :D

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                                     authorized to
                                     deliver or relay mail for
                                     this domain: </label>
-                                <input type="text" class="form-control" id="relayHostnames" placeholder="Hostname(s) separated by a space." />
+                                <input type="text" class="form-control" id="relayHostnames" placeholder="Hostname(s) separated by a space."
+                                    value="" />
                             </div>
                             <div class="form-group">
                                 <label class="input__label" for="relayDomains">List any domain(s)<a href="#"
@@ -133,7 +134,8 @@
                                     authorized to
                                     deliver or relay mail for
                                     your domain: </label>
-                                <input type="text" class="form-control" id="relayDomains" placeholder="Domain(s) separated by a space." />
+                                <input type="text" class="form-control" id="relayDomains" placeholder="Domain(s) separated by a space."
+                                    value="" />
                             </div>
                         </div>
                     </form>
