auto focus on page load. minor style fixes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
                         <div class="form-group">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="domain" placeholder="Your domain" value="" />
+                                <input type="text" class="form-control" id="domain" placeholder="Your domain" value=""
+                                    autofocus />
                             </div>
                         </div>
 
